Add new specifications
1) The dedicated pages for user stories have been removed
2) Collections have been added for specifications
3) Fix some issues in the CSS
4) Improved the contribution guide

--- a/_config_localhost.yml
+++ b/_config_localhost.yml
@@ -4,7 +4,11 @@ author :
   email : stephane.begaudeau@obeo.fr
 encoding: utf-8
 markdown: redcarpet
-pygments: true
+highlighter: pygments
 redcarpet:
   extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "strikethrough", "superscript", "tables"]
 exclude: []
+baseurl: /
+collections:
+  specifications:
+    output: true
